# brain-engine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  KNOWLEDGE_CACHE_PLAN.md  README.md  brain-plan.md  install.sh  uninstall.sh
.github/workflows/: ci.yml
assets/output-styles/: brain-eco-ultra.md  brain-eco.md
clients/node/: brain-client.mjs
crates/brain-cli/: Cargo.toml
crates/brain-cli/src/: main.rs
crates/brain-cli/src/commands/: cache.rs  daemon.rs  index.rs  init.rs  install_hooks.rs  llm.rs  mod.rs  query.rs  route.rs  stats.rs  status.rs  symbols.rs
crates/brain-cli/tests/: cli.rs
crates/brain-core/: Cargo.toml
crates/brain-core/src/: cache.rs  chunk.rs  config.rs  context.rs  db.rs  decision.rs  error.rs  hash.rs  index.rs  lib.rs  llm_state.rs  locator.rs  metrics.rs  model_router.rs  paths.rs  retrieve.rs  router.rs  scaffold.rs  summarize.rs  symbols.rs  tokens.rs  vectors.rs  walk.rs
crates/brain-core/tests/: index.rs  retrieve.rs  scaffold.rs  summarize.rs  symbols.rs
crates/brain-daemon/: Cargo.toml
crates/brain-daemon/src/: main.rs  protocol.rs  watcher.rs  worker.rs
crates/brain-embed/: Cargo.toml
crates/brain-embed/src/: api.rs  embedder.rs  error.rs  lib.rs  local.rs  provider.rs
