[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Brain Engine command-line interface (the `brain` binary)."

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
brain-core = { path = "../brain-core" }
brain-embed = { path = "../brain-embed" }
clap.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
